# viko

./: .env  .env.example  .gitignore  .vercelignore  AGENTS.md  BUILD.md  BUILD_WINDOWS.md  FIX_READONLY_FILESYSTEM.md  LICENSE  README-REMOTE.md  README.md  UNIFIED_EVENT_MIGRATION.md  fix-rustup.sh  index.html  mcp.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  ui-design-system.json  vite.config.ts  wrangler.jsonc
.cargo/: config.toml
.cursor/rules/: ui-design-system.mdc
.github/workflows/: build.yml
.obsidian/: workspace.json
doc/: AUDIO_INCOMPLETE_PLAYBACK_DEBUG.md  AUDIO_PLAYER_LEARNING_GUIDE.md  PTS_VS_CURRENT_POS_ANALYSIS.md  SAMPLES_PROCESSED_VS_CURRENT_POS.md  SEEK_AUDIO_DEBUG.md  TAURI_DRAG_DROP.md  TROUBLESHOOTING_TRANSCODE.md  log.txt  rules.txt  video.txt
doc/ai/: ffmpeg_usage_guidelines.md  imp.md  init.md
docs/: AUDIO_EARLY_END_ANALYSIS.md  AUDIO_PLAYBACK_FLOW.md  AUDIO_PLAYER_DEBUG.md  AV_SYNC_ANALYSIS.md  BUFFER_MANAGEMENT_DEBUG.md  FFPROBE_COMMANDS.md  MEDIA_TASK_QUEUE_REFACTOR_PLAN.md  audio-compress-convert-flow.canvas  bak.md  download.md  en.md  figurex-arch.canvas  figurex-rust-ffmpeg-queue-arch.canvas  format_implementation_notes.md  help.md  intro.md  remote-deployment.md  theme.md  video-convert-compress-flow.canvas  video-handleConvertAll-flow.canvas
docs/ai/: imp.md  init.md
public/locales/en/: auth.json  common.json  compressor.json  converter.json  home.json  metadata.json  myfiles.json  sidebar.json  task.json  tasks.json  watermark.json
public/locales/zh/: auth.json  common.json  compressor.json  converter.json  home.json  metadata.json  myfiles.json  sidebar.json  task.json  tasks.json  (+1 more)
scripts/: README.md  bump-version.mjs  check-ffmpeg-deps.ps1  check-ffmpeg-deps.rs  check-ffmpeg-deps.sh  downgrade-ffmpeg.sh  fix-mac-dylibs.sh  fix-win-dlls.ps1  get-ffmpeg-pkgconfig.sh  local-release-upload.mjs  sign.sh  simulate-updater-release.mjs  test-updater-upload.mjs  windows-installer-hooks.nsh
src/: .env  App.css  App.tsx  main.tsx
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  build5.txt  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  tmp_vc_head.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_compressor.rs  audio_converter.rs  audio_player.rs  commands.rs  events.rs  ffmpeg_ffi.rs  ffmpeg_loader.rs  ffmpeg_media_info.rs  gif_converter.rs  image_compressor.rs  image_converter.rs  lib.rs  main.rs  media_common.rs  metadata.rs  shared.rs  thumbnail.rs  video_compressor.rs  video_converter.rs  video_converter_audio.rs  video_player.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/media_common/: audio_decode.rs  audio_playback.rs  audio_transcode.rs  codec.rs  fifo.rs  gif_pipeline.rs  mod.rs  player_control.rs  resolution.rs  video_pipeline.rs  video_pipeline_core.rs  video_transcode.rs
src-tauri/src/services/: animated_image.rs  mod.rs
src-tauri/src/services/compress/: audio.rs  image.rs  video.rs  video_stages.rs
src-tauri/src/services/convert/: audio.rs  audio_transcode.rs  denoise.rs  gif.rs  image.rs  mod.rs  video.rs  video_audio.rs  video_stages.rs
src-tauri/src/services/ffmpeg/: ffi.rs  loader.rs  media_info.rs  mod.rs
src-tauri/src/services/media_probe/: mod.rs  types.rs  video.rs
src-tauri/src/services/media_tools/: image_info.rs  metadata.rs  mod.rs  thumbnail.rs  watermark.rs
src-tauri/src/services/player/: audio.rs  mod.rs  video.rs  video_utils.rs
src-tauri/src/storage/: favorites.rs  media_queue.rs  mod.rs  task_history.rs  updater_guard.rs  usage_gate.rs
src-tauri/src/task/: cancel.rs  mod.rs  queue.rs
src-tauri/tests/: audio_compressor_tests.rs  audio_converter_tests.rs  ffmpeg_diagnostics_tests.rs  gif_converter_tests.rs  image_compressor_tests.rs  image_converter_tests.rs  queue_persistence_test.rs  video_compressor_tests.rs  video_converter_tests.rs  watermark_tests.rs
src/components/: AudioPlayer.tsx  ConfigCard.tsx  FFmpegCommand.tsx  FileSelector.tsx  LanguageSwitcher.tsx  Layout.tsx  MediaThumbnail.tsx  ModuleManager.tsx  Navbar.tsx  OutputPreview.tsx  ResolutionSelect.tsx  SelfCheck.tsx  TranscodeButton.tsx  VideoPlayer.tsx  VideoPreview.tsx
src/config/: navigation.tsx
src/constants/: ffmpeg.ts  video.ts
src/data/: audio_options.ts  capabilities.ts  encoder_options.ts  encoders.ts  format_capabilities.ts  formats.ts  resolution.ts  video_options.ts
src/db/: converterDB.ts
src/hooks/: useBatchMediaDetails.ts
src/layout/: AuthLayout.tsx  Header.tsx  HighSpeedConversionBadge.tsx  OnlineHelpDialog.tsx  RootPage.tsx  Sidebar.tsx
src/lib/: auth-client.ts  av.ts  bridge.ts  bridgeError.ts  createTaskStore.ts  desktop-auth.ts  drag.ts  env.ts  ffmpeg.ts  file.ts  i18n.ts  indexed.ts  log.ts  mediaTaskEvent.ts  mediaTaskQueue.ts  platform.ts  revealItemInDir.ts  task-identity.ts  time.ts  updater.ts  utils.ts
src/pages/: force-update.tsx
src/services/: errorMonitor.ts  http.ts  task-history-api.ts  user-api.ts
src/stores/: app.ts  compressorStore.ts  converterStore.ts  settingsStore.ts  user.ts
src/types/: converter.ts  media.ts  options.ts  tasks.ts  user.ts
src/utils/: file.ts
(+282 files in other folders)
