[package]
name = "audio_video_kit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audio_video_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-opener = "2"
dirs = "6"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
zip = "0.6"
tar = "0.4"
xz2 = "0.1"
# 使用 libloading 进行动态加载，而不是编译时链接
libloading = "0.8"
# 使用 ffmpeg-next 作为主要 FFmpeg 接口（与 video-rs 对齐 7.1.x）
ffmpeg-next = { version = "7.1.0", features = ["codec", "format", "filter", "software-scaling", "software-resampling"] }
# 视频播放器相关依赖
# 注意：当前实现通过 Tauri 事件发送帧数据到前端 Canvas 渲染，不需要 wgpu
# 如果需要原生窗口渲染，可以后续添加 wgpu
cpal = "0.15"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
ringbuf = "0.4"
video-rs = { path = "vendor/video-rs", default-features = false }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
