[package]
name = "audio_video_kit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audio_video_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-opener = "2"
dirs = "6"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
zip = "0.6"
tar = "0.4"
xz2 = "0.1"
libloading = "0.8"
ffmpeg-next = { version = "7.1.0", features = ["codec", "format", "filter", "software-scaling", "software-resampling"] }
cpal = "0.15"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
ringbuf = "0.3"
video-rs = { path = "vendor/video-rs", default-features = false }
smol = "2"
anyhow = "1"
futures = "0.3"
image = "0.25.9"
base64 = "0.22.1"
machine-uid = "0.5.4"
imageproc = "0.25.0"
ab_glyph = "0.2.23"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
